Updated ComparatorExpression and implemented the creation of ComparisonExpressions in ExpressionCreator.